# verbatim-rag

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLIC_ROADMAP.md  README.md  build_verbatim.ipynb  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  verbatim_structured.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  docs.yml  rights-check.yml
api/: .gitignore  app.py  config.py  dependencies.py  requirements.txt
api/services/: __init__.py  rag_service.py
api/verbatim-core/: index.html
api/verbatim-rag/: index.html
docs/: build_verbatim.ipynb  index.md  verbatim_blog.md  verbatim_structured.ipynb
docs/api/: verbatim-core.md  verbatim-rag.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: verbatim-core.md  verbatim-rag.md
examples/: bulk_ingest_markdown.py  example.ipynb  example_template_usage.py  quick_start.py  rag_agnostic_transform.py  verbatim_doc_demo.py
examples/example_docs/: apollo_11.txt  eiffel_tower.txt  golden_gate_bridge.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js  theme.js
frontend/src/components/: ChatInput.js  ChatMessage.js  ChatPanel.js  CleanFactInterface.jsx  DocumentPanel.js  DocumentSelector.js  DocumentViewer.js  ErrorBoundary.js  Header.js  HighlightedText.js  MessageItem.js  RelevantSentences.js  Sidebar.js
frontend/src/contexts/: ApiContext.js  DocumentsContext.js  SidebarContext.js
frontend/src/utils/: cn.js
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/verbatim-core/: index.html
guide/verbatim-rag/: index.html
scripts/: process_anthology.py  process_papers_schema.py  query_index.py  test_index_streamlit.py
search/: search_index.json
tests/: conftest.py  test_extractors.py  test_llm_client.py  test_models.py  test_response_builder.py  test_templates.py  test_transform.py  test_version_metadata.py
verbatim_blog/: index.html
verbatim_core/: __init__.py  cli.py  enhance.py  extractors.py  llm_client.py  models.py  providers.py  response_builder.py  transform.py  universal_document.py
verbatim_core/extractor_models/: dataset.py  preprocess_ragbench.py  train.py  trainer.py
verbatim_core/templates/: __init__.py  base.py  contextual.py  filler.py  manager.py  question_specific.py  random.py  static.py  structured.py
verbatim_rag/: __init__.py  chunker_providers.py  chunking.py  cli.py  config.py  core.py  document.py  embedding_providers.py  extractors.py  index.py  intent.py  llm_client.py  loader.py  models.py  providers.py  rerankers.py  response_builder.py  schema.py  streaming.py  template_manager.py  text_splitter.py  transform.py  universal_document.py  vector_stores.py  verbatim_doc.py
verbatim_rag/examples/: model_extractor_example.py
verbatim_rag/extractor_models/: model.py  preprocess_ragbench.py  train.py  trainer.py
verbatim_rag/ingestion/: __init__.py  document_processor.py  hierarchical_chunker.py  schema_adapter.py
verbatim_rag/templates/: __init__.py
verbatim_rag/tools/: upload_to_hub.py
verbatim_rag/vector_stores/: __init__.py  base.py  hybrid_search.py  milvus_base.py  milvus_cloud.py  milvus_local.py  utils.py
