[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verbatim-rag"
version = "0.2.2"
description = "A minimalistic RAG system that prevents hallucination by ensuring all generated content is explicitly derived from source documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adam Kovacs", email = "kovacs@krlabs.eu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "verbatim-core>=0.2.0",

    # Core ML/AI dependencies
    "openai>=1.3.0",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "tiktoken>=0.5.1",
    "transformers==4.53.3",
    "torch>=2.6.0",
    "scikit-learn==1.6.1",
    "datasets==3.4.1",

    # Document processing and parsing
    "docling",
    "chonkie",

    # Configuration and data models
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    
    # Vector storage and search
    "pymilvus>=2.6.3",
    "pymilvus[milvus_lite]",
    
    # Embeddings
    "sentence-transformers>=5.0.0",

    # API and web
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "huggingface_hub>=0.16.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = [
    "verbatim-rag[dev,docs]",
]

[project.urls]
"Homepage" = "https://github.com/krlabsorg/verbatim-rag"
"Bug Tracker" = "https://github.com/krlabsorg/verbatim-rag/issues"

[project.scripts]
verbatim-rag = "verbatim_rag.cli:main"
verbatim-enhance = "verbatim_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["verbatim_rag"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
